// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary all filters 1`] = `
<div
  class="Summary"
>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:search-title","value":"name","filterType":"search"}
  </div>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:states-title","value":["i18n:states-develop","i18n:states-supported","i18n:states-needinfo","i18n:states-closed"],"filterType":"states"}
  </div>
  <div>
    SummaryItem mock. Props used: {"value":["i18n:with-problems","i18n:perfect"],"filterType":"isSuspicious"}
  </div>
  <div>
    SummaryItem mock. Props used: {"value":["i18n:with-externals","i18n:without-externals"],"filterType":"hasExternalMembers"}
  </div>
  <button
    autocomplete="off"
    class="Button2 Button2_view_clear Button2_size_s Summary-FiltersClear"
    type="button"
  >
    <span
      class="Button2-Text"
    >
      i18n:clear-filters
    </span>
  </button>
</div>
`;

exports[`Summary no filters 1`] = `
<div
  class="Summary"
/>
`;

exports[`Summary with labels 1`] = `
<div
  class="Summary"
>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:search-title","value":"name","filterType":"search"}
  </div>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:member-title","value":["User 1","User 2"],"filterType":"member"}
  </div>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:owner-title","value":["Owner 3","Owner 4"],"filterType":"owner"}
  </div>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:department-title","value":["Dep 1","Dep 2"],"filterType":"department"}
  </div>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:states-title","value":["i18n:states-develop","i18n:states-supported","i18n:states-needinfo","i18n:states-closed"],"filterType":"states"}
  </div>
  <div>
    SummaryItem mock. Props used: {"value":["i18n:with-problems","i18n:perfect"],"filterType":"isSuspicious"}
  </div>
  <div>
    SummaryItem mock. Props used: {"value":["i18n:with-externals","i18n:without-externals"],"filterType":"hasExternalMembers"}
  </div>
  <div>
    SummaryItem mock. Props used: {"label":"i18n:tags-title","value":["Tag3","Tag4"],"filterType":"tags"}
  </div>
  <button
    autocomplete="off"
    class="Button2 Button2_view_clear Button2_size_s Summary-FiltersClear"
    type="button"
  >
    <span
      class="Button2-Text"
    >
      i18n:clear-filters
    </span>
  </button>
</div>
`;
